@@ -14,6 +14,7 @@ AC_CANONICAL_HOST
 
 
 dnl Features (enabled by default)
+AC_ARG_ENABLE([bloat],        AS_HELP_STRING([--disable-bloat],       [disable unnecessary heavy binary data]))
 AC_ARG_ENABLE([float],        AS_HELP_STRING([--disable-float],       [disable floating-point arithmeric]))
 
 dnl Features (disabled by default)
@@ -93,6 +94,7 @@ AM_CONDITIONAL([ASM_RISCV64],        [test "$host_cpu" = riscv64])
 AM_CONDITIONAL([ASM_X86_64],         [test "$host_cpu" = x86_64])
 
 dnl Features (enabled by default)
+AM_CONDITIONAL([ENABLE_BLOAT],       [test "$enable_bloat"       != no])
 AM_CONDITIONAL([ENABLE_FLOAT],       [test "$enable_float"       != no])
 
 dnl Features (disabled by default)
@@ -128,6 +130,7 @@ AS_IF([test "$host_cpu" = riscv64],       [AC_DEFINE([ASM_RISCV64],             
 AS_IF([test "$host_cpu" = x86_64],        [AC_DEFINE([ASM_X86_64],                 [1], [architecture is x86_64])])
 
 dnl Features (enabled by default)
+AS_IF([test "$enable_bloat"       != no], [AC_DEFINE([ENABLE_BLOAT],               [1], [enabled unnecessary heavy binary data])])
 AS_IF([test "$enable_float"       != no], [AC_DEFINE([ENABLE_FLOAT],               [1], [enabled floating-point arithmeric])])
 
 dnl Features (disabled by default)
