@@ -1,3 +1,7 @@
+2022-01-21  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Allow to disable unnecessary heavy binary data
+
 2022-01-20  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* libkernaux 0.1.0 released
